--- a/Training-Data/Los_Angeles_Music_Composer_Training_Dataset_Maker.ipynb
+++ b/Training-Data/Los_Angeles_Music_Composer_Training_Dataset_Maker.ipynb
@@ -272,8 +272,8 @@
         "                      [42, 43], # Cello\n",
         "                      [46], # Harp\n",
         "                      [56, 57, 58, 59, 60], # Trumpet\n",
-        "                      [64, 65, 66, 67], # Sax\n",
-        "                      [71, 72, 73, 74, 75, 76], # Flute\n",
+        "                      [64, 65, 66, 67, 68, 69, 70, 71], # Sax\n",
+        "                      [72, 73, 74, 75, 76, 77, 78], # Flute\n",
         "                      [-1], # Drums\n",
         "                      [52, 53], # Choir\n",
         "                      [16, 17, 18, 19, 20] # Organ\n",
