--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer (ver. 1.0)\n",
+        "# Los Angeles Music Composer (ver. 2.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -173,7 +173,7 @@
       "outputs": [],
       "source": [
         "#@title Load Los Angeles Music Composer Model\n",
-        "full_path_to_model_checkpoint = \"/content/Los-Angeles-Music-Composer/Model/Los_Angeles_Music_Composer_Trained_Model_66010_steps_0.7282_loss.pth\" #@param {type:\"string\"}\n",
+        "full_path_to_model_checkpoint = \"/content/Los-Angeles-Music-Composer/Model/Los_Angeles_Music_Composer_Model_88835_steps_0.643_loss.pth\" #@param {type:\"string\"}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Loading Los Angeles Music Composer Pre-Trained Model...')\n",
@@ -188,11 +188,15 @@
         "model = LocalTransformer(\n",
         "    num_tokens = 2831,\n",
         "    dim = 1024,\n",
-        "    depth = 24,\n",
+        "    depth = 36,\n",
         "    causal = True,\n",
         "    local_attn_window_size = 512,\n",
         "    max_seq_len = SEQ_LEN\n",
-        ").cuda()\n",
+        ")\n",
+        "\n",
+        "model = torch.nn.DataParallel(model)\n",
+        "\n",
+        "model.cuda()\n",
         "print('=' * 70)\n",
         "\n",
         "print('Loading model checkpoint...')\n",
@@ -210,7 +214,7 @@
         "summary(model)\n",
         "\n",
         "# Plot Token Embeddings\n",
-        "tok_emb = model.token_emb.weight.detach().cpu().tolist()\n",
+        "tok_emb = model.module.token_emb.weight.detach().cpu().tolist()\n",
         "\n",
         "tok_emb1 = []\n",
         "\n",
@@ -337,8 +341,8 @@
         "\n",
         "  # recalculating timings\n",
         "  for e in events_matrix1:\n",
-        "      e[1] = math.ceil(e[1] / 8) # Max 1 seconds for start-times\n",
-        "      e[2] = math.ceil(e[2] / 16) # Max 2 seconds for durations\n",
+        "      e[1] = int(round(e[1] / 10)) # Max 1 seconds for start-times\n",
+        "      e[2] = int(round(e[2] / 20)) # Max 2 seconds for durations\n",
         "\n",
         "  # Sorting by pitch, then by start-time\n",
         "  events_matrix1.sort(key=lambda x: x[4], reverse=True)\n",
@@ -397,7 +401,7 @@
         "          #=======================================================\n",
         "\n",
         "          # Composition control seq\n",
-        "          intro_mode_time = statistics.mode([y[0] for y in melody_chords if y[2] != 9])\n",
+        "          intro_mode_time = statistics.mode([0] + [y[0] for y in melody_chords if y[2] != 9 and y[0] != 0])\n",
         "          intro_mode_dur = statistics.mode([y[1] for y in melody_chords if y[2] != 9])\n",
         "          intro_mode_pitch = statistics.mode([y[3] for y in melody_chords if y[2] != 9])\n",
         "          intro_mode_velocity = statistics.mode([y[4] for y in melody_chords if y[2] != 9])\n",
@@ -447,9 +451,9 @@
         "                    \n",
         "    for ss in song1:\n",
         "\n",
-        "      tim += ss[0] * 8\n",
+        "      tim += ss[0] * 10\n",
         "\n",
-        "      dur = ((ss[1]-128) // 8) * 16\n",
+        "      dur = ((ss[1]-128) // 8) * 20\n",
         "      vel = (((ss[1]-128) % 8)+1) * 15\n",
         "   \n",
         "      channel = (ss[2]-1152) // 128\n",
@@ -515,17 +519,17 @@
       "source": [
         "#@title Improv Generation\n",
         "\n",
-        "number_of_tokens_tp_generate = 512 #@param {type:\"slider\", min:32, max:4064, step:32}\n",
+        "number_of_tokens_tp_generate = 1024 #@param {type:\"slider\", min:32, max:4064, step:32}\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "\n",
         "#@markdown Use custom MIDI sequences if you want to have model try to mimic custom MIDI composition. Or you can specify your own, completely custom sequence for the model to use\n",
         "\n",
-        "start_improv_sequence_type = \"custom_MIDI_instruments_and_composition_seq\" #@param [\"custom_MIDI_instruments_seq\", \"custom_MIDI_instruments_and_composition_seq\", \"user_defined_seq\"]\n",
+        "start_improv_sequence_type = \"user_defined_seq\" #@param [\"custom_MIDI_instruments_seq\", \"custom_MIDI_instruments_and_composition_seq\", \"user_defined_seq\"]\n",
         "\n",
         "#@markdown Specify user-defined improv sequence below\n",
         "\n",
         "drums_present_or_not = True #@param {type:\"boolean\"}\n",
-        "number_of_instruments = 8 #@param {type:\"slider\", min:1, max:12, step:1}\n",
+        "number_of_instruments = 4 #@param {type:\"slider\", min:1, max:12, step:1}\n",
         "\n",
         "#@markdown NOTE: If you want to specify composition seq, you must specify all four parameters. All four parameters must be > 0\n",
         "\n",
@@ -537,7 +541,7 @@
         "#@markdown Other settings\n",
         "\n",
         "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
-        "temperature = 0.8 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Improv Model Generator')\n",
@@ -579,7 +583,7 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.generate(inp, \n",
+        "out = model.module.generate(inp, \n",
         "                      number_of_tokens_tp_generate, \n",
         "                      temperature=temperature, \n",
         "                      return_prime=True, \n",
@@ -614,7 +618,7 @@
         "    \n",
         "      song = out1\n",
         "      song_f = []\n",
-        "      time = 0\n",
+        "      tim = 0\n",
         "      dur = 0\n",
         "      vel = 0\n",
         "      pitch = 0\n",
@@ -634,15 +638,15 @@
         "                      \n",
         "      for ss in song1:\n",
         "\n",
-        "        time += ss[0] * 8\n",
+        "        tim += ss[0] * 10\n",
         "\n",
-        "        dur = (((ss[1]-128) // 8)+1) * 16\n",
+        "        dur = (((ss[1]-128) // 8)+1) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
         "    \n",
         "        channel = (ss[2]-1152) // 128\n",
         "        pitch = (ss[2]-1152) % 128\n",
         "                        \n",
-        "        song_f.append(['note', time, dur, channel, pitch, vel ])\n",
+        "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
         "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
         "                                                          output_signature = 'Los Angeles Music Composer',  \n",
@@ -700,11 +704,11 @@
         "#@title Standard/Simple Continuation\n",
         "\n",
         "number_of_prime_tokens = 512 #@param {type:\"slider\", min:4, max:3072, step:4}\n",
-        "number_of_tokens_to_generate = 512 #@param {type:\"slider\", min:32, max:4096, step:32}\n",
+        "number_of_tokens_to_generate = 1024 #@param {type:\"slider\", min:32, max:4096, step:32}\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "include_prime_tokens_in_generated_output = True #@param {type:\"boolean\"}\n",
         "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
-        "temperature = 0.8 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Standard Model Generator')\n",
@@ -721,9 +725,9 @@
         "\n",
         "inp = torch.LongTensor(inp).cuda()\n",
         "\n",
-        "start_time = time()\n",
+        "#start_time = time()\n",
         "\n",
-        "out = model.generate(inp, \n",
+        "out = model.module.generate(inp, \n",
         "                      number_of_tokens_to_generate, \n",
         "                      temperature=temperature, \n",
         "                      return_prime=include_prime_tokens_in_generated_output, \n",
@@ -734,8 +738,8 @@
         "print('=' * 70)\n",
         "print('Done!')\n",
         "print('=' * 70)\n",
-        "print('Generation took', time() - start_time, \"seconds\")\n",
-        "print('=' * 70)\n",
+        "#print('Generation took', time() - start_time, \"seconds\")\n",
+        "#print('=' * 70)\n",
         "#======================================================================\n",
         "print('Rendering results...')\n",
         "print('=' * 70)\n",
@@ -775,9 +779,9 @@
         "                      \n",
         "      for ss in song1:\n",
         "\n",
-        "        tim += ss[0] * 8\n",
+        "        tim += ss[0] * 10\n",
         "\n",
-        "        dur = ((ss[1]-128) // 8) * 16\n",
+        "        dur = ((ss[1]-128) // 8) * 20\n",
         "        vel = (((ss[1]-128) % 8)+1) * 15\n",
         "    \n",
         "        channel = (ss[2]-1152) // 128\n",
@@ -839,7 +843,7 @@
         "melody_length_in_notes = 48 #@param {type:\"slider\", min:16, max:512, step:16}\n",
         "number_of_prime_notes = 0 #@param {type:\"slider\", min:0, max:32, step:1}\n",
         "number_of_generation_attempts_per_melody_note = 16 #@param {type:\"slider\", min:1, max:64, step:1}\n",
-        "temperature = 0.8 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Advanced Melody Harmonization Model Generator')\n",
@@ -912,7 +916,7 @@
         "\n",
         "  while chord_time < next_note_time and count < number_of_generation_attempts_per_melody_note:\n",
         "   \n",
-        "    out1 = model.generate(inp[None, ...], \n",
+        "    out1 = model.module.generate(inp[None, ...], \n",
         "                          3, \n",
         "                          temperature=temperature, \n",
         "                          return_prime=False, \n",
@@ -970,9 +974,9 @@
         "                    \n",
         "    for ss in song1:\n",
         "\n",
-        "      time += ss[0] * 8\n",
+        "      time += ss[0] * 10\n",
         "\n",
-        "      dur = ((ss[1]-128) // 8) * 16\n",
+        "      dur = ((ss[1]-128) // 8) * 20\n",
         "      vel = (((ss[1]-128) % 8)+1) * 15\n",
         "   \n",
         "      channel = (ss[2]-1152) // 128\n",
