--- a/Training-Data/Los_Angeles_Music_Composer_Training_Dataset_Maker.ipynb
+++ b/Training-Data/Los_Angeles_Music_Composer_Training_Dataset_Maker.ipynb
@@ -214,8 +214,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "CeGo7CruaCJQ"
+        "id": "CeGo7CruaCJQ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -320,8 +320,8 @@
         "\n",
         "            # recalculating timings\n",
         "            for e in events_matrix1:\n",
-        "                e[1] = round(e[1] / 10) # Max 1 seconds for start-times\n",
-        "                e[2] = round(e[2] / 20) # Max 2 seconds for durations\n",
+        "                e[1] = int(round(e[1] / 10)) # Max 1 seconds for start-times\n",
+        "                e[2] = int(round(e[2] / 20)) # Max 2 seconds for durations\n",
         "\n",
         "            # Sorting by pitch, then by start-time\n",
         "            events_matrix1.sort(key=lambda x: x[4], reverse=True)\n",
@@ -403,11 +403,8 @@
         "                      dur_vel = (m[1] * 8) + (m[4]-1)\n",
         "                      cha_ptc = (m[2] * 128) + m[3]\n",
         "                    \n",
-        "                      if m[0] != 0:\n",
-        "                          melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
-        "                      else:\n",
-        "                          melody_chords_f.extend([dur_vel+128, cha_ptc+1152])\n",
-        "\n",
+        "                      melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
+        "                     \n",
         "                    #=======================================================\n",
         "\n",
         "                    # Processed files counter\n",
