--- a/Training-Code/Los_Angeles_Music_Composer_Maker.ipynb
+++ b/Training-Code/Los_Angeles_Music_Composer_Maker.ipynb
@@ -182,7 +182,7 @@
       },
       "outputs": [],
       "source": [
-        "len(train_data) / 4096 / 4 / 4"
+        "len(train_data) / 4096 / 16"
       ]
     },
     {
@@ -218,13 +218,13 @@
         "# constants\n",
         "\n",
         "SEQ_LEN = 4096\n",
-        "BATCH_SIZE = 4\n",
+        "BATCH_SIZE = 16\n",
         "\n",
-        "NUM_EPOCHS = 4\n",
+        "NUM_EPOCHS = 2\n",
+        "GRADIENT_ACCUMULATE_EVERY = 1\n",
         "\n",
-        "NUM_BATCHES = (len(train_data) // SEQ_LEN // BATCH_SIZE // 4) * NUM_EPOCHS\n",
+        "NUM_BATCHES = (len(train_data) // SEQ_LEN // BATCH_SIZE // GRADIENT_ACCUMULATE_EVERY) * NUM_EPOCHS\n",
         "\n",
-        "GRADIENT_ACCUMULATE_EVERY = 4\n",
         "LEARNING_RATE = 2e-4\n",
         "\n",
         "VALIDATE_EVERY  = 100\n",
@@ -246,11 +246,15 @@
         "model = LocalTransformer(\n",
         "    num_tokens = 2831,\n",
         "    dim = 1024,\n",
-        "    depth = 32,\n",
+        "    depth = 36,\n",
         "    causal = True,\n",
         "    local_attn_window_size = 512,\n",
         "    max_seq_len = SEQ_LEN\n",
-        ").cuda()\n",
+        ")\n",
+        "\n",
+        "model = torch.nn.DataParallel(model)\n",
+        "\n",
+        "model.cuda()\n",
         "\n",
         "print('Done!')\n",
         "      \n",
@@ -267,14 +271,7 @@
         "    def __getitem__(self, index):\n",
         "        \n",
         "        # random sampling\n",
-        "        \n",
-        "        if index < (self.data.size(0) // self.seq_len):\n",
-        "            idx = index * self.seq_len\n",
-        "        else:\n",
-        "            idx = secrets.randbelow(self.data.size(0) - self.seq_len - 1)\n",
-        "            \n",
-        "        #if index % 10000 == 0:\n",
-        "        #    print(index, idx)\n",
+        "        idx = secrets.randbelow(self.data.size(0) - self.seq_len - 1)\n",
         "   \n",
         "        full_seq = self.data[idx: idx + self.seq_len + 1].long()\n",
         "        \n",
@@ -334,14 +331,14 @@
         "\n",
         "    for __ in range(GRADIENT_ACCUMULATE_EVERY):\n",
         "        loss, acc = model(next(train_loader), return_loss = True)\n",
-        "        loss.backward()\n",
+        "        loss.backward(torch.ones(loss.shape).cuda())\n",
         "        \n",
         "    if i % PRINT_STATS_EVERY == 0:\n",
-        "        print(f'Training loss: {loss.item()}')\n",
-        "        print(f'Training acc: {acc.item()}')\n",
+        "        print(f'Training loss: {loss.mean().item()}')\n",
+        "        print(f'Training acc: {acc.mean().item()}')\n",
         "    \n",
-        "    train_losses.append(loss.item())\n",
-        "    train_accs.append(acc.item())\n",
+        "    train_losses.append(loss.mean().item())\n",
+        "    train_accs.append(acc.mean().item())\n",
         "    \n",
         "    torch.nn.utils.clip_grad_norm_(model.parameters(), 0.5)\n",
         "    optim.step()\n",
@@ -352,11 +349,11 @@
         "        with torch.no_grad():\n",
         "            val_loss, val_acc = model(next(val_loader), return_loss = True)\n",
         "            \n",
-        "            print(f'Validation loss: {val_loss.item()}')\n",
-        "            print(f'Validation acc: {val_acc.item()}')\n",
+        "            print(f'Validation loss: {val_loss.mean().item()}')\n",
+        "            print(f'Validation acc: {val_acc.mean().item()}')\n",
         "            \n",
-        "            val_losses.append(val_loss.item())\n",
-        "            val_accs.append(val_acc.item())\n",
+        "            val_losses.append(val_loss.mean().item())\n",
+        "            val_accs.append(val_acc.mean().item())\n",
         "            \n",
         "            print('Plotting training loss graph...')\n",
         "            \n",
@@ -394,7 +391,7 @@
         "        \n",
         "        print(inp)\n",
         "\n",
-        "        sample = model.generate(inp[None, ...], GENERATE_LENGTH)\n",
+        "        sample = model.module.generate(inp[None, ...], GENERATE_LENGTH)\n",
         "        \n",
         "        print(sample)\n",
         "        \n",
@@ -412,20 +409,6 @@
         "        TMIDIX.Tegridy_Any_Pickle_File_Writer(data, '/notebooks/losses_accs')\n",
         "        \n",
         "        print('Done!')      "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lQqo1ok9jFaX"
-      },
-      "outputs": [],
-      "source": [
-        "for p in val_loader:\n",
-        "    pass\n",
-        "\n",
-        "    "
       ]
     },
     {
@@ -507,12 +490,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "z87TlDTVl5cp"
-      },
       "source": [
-        "# Congrats! You did it! :)"
-      ]
+        "# Eval"
+      ],
+      "metadata": {
+        "id": "w9ZJWJVhA7JA"
+      }
     },
     {
       "cell_type": "code",
@@ -533,9 +516,18 @@
         "\n",
         "print(inp)\n",
         "\n",
-        "sample = model.generate(inp, 1024)\n",
+        "sample = model.module.generate(inp, 1024)\n",
         "\n",
         "print(sample)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z87TlDTVl5cp"
+      },
+      "source": [
+        "# Congrats! You did it! :)"
       ]
     }
   ],
