--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -286,19 +286,20 @@
         "itrack = 1\n",
         "patches = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
         "\n",
-        "patch_map = [[0, 1, 2, 3, 4, 5, 6, 7], # Piano \n",
-        "          [24, 25, 26, 27, 28, 29, 30], # Guitar\n",
-        "          [32, 33, 34, 35, 36, 37, 38, 39], # Bass\n",
-        "          [40, 41], # Violin\n",
-        "          [42, 43], # Cello\n",
-        "          [46], # Harp\n",
-        "          [56, 57, 58, 59, 60], # Trumpet\n",
-        "          [71, 72], # Clarinet\n",
-        "          [73, 74, 75], # Flute\n",
-        "          [-1], # Drums\n",
-        "          [52, 53], # Choir\n",
-        "          [16, 17, 18, 19, 20] # Organ\n",
-        "          ]\n",
+        "patch_map = [\n",
+        "            [0, 1, 2, 3, 4, 5, 6, 7], # Piano \n",
+        "            [24, 25, 26, 27, 28, 29, 30], # Guitar\n",
+        "            [32, 33, 34, 35, 36, 37, 38, 39], # Bass\n",
+        "            [40, 41], # Violin\n",
+        "            [42, 43], # Cello\n",
+        "            [46], # Harp\n",
+        "            [56, 57, 58, 59, 60], # Trumpet\n",
+        "            [64, 65, 66, 67, 68, 69, 70, 71], # Sax\n",
+        "            [72, 73, 74, 75, 76, 77, 78], # Flute\n",
+        "            [-1], # Drums\n",
+        "            [52, 53], # Choir\n",
+        "            [16, 17, 18, 19, 20] # Organ\n",
+        "            ]\n",
         "\n",
         "while itrack < len(score):\n",
         "  for event in score[itrack]:         \n",
