--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer (ver. 2.0)\n",
+        "# Los Angeles Music Composer (ver. 2.1)\n",
         "\n",
         "***\n",
         "\n",
@@ -825,6 +825,132 @@
         "      plt.ylabel(\"Pitch\")\n",
         "      plt.show() "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# (INPAINT)"
+      ],
+      "metadata": {
+        "id": "jUdZ93-K9ABR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Pitches/Instruments Inpainting\n",
+        "number_of_prime_notes = 16 #@param {type:\"slider\", min:0, max:128, step:1}\n",
+        "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "\n",
+        "print('=' * 70)\n",
+        "print('Los Angeles Music Composer Standard Model Generator')\n",
+        "print('=' * 70)\n",
+        "\n",
+        "out2 = []\n",
+        "\n",
+        "for m in melody_chords_f1[:number_of_prime_notes]:\n",
+        "  out2.extend(m)\n",
+        "\n",
+        "for i in tqdm.tqdm(range(number_of_prime_notes, len(melody_chords_f1))):\n",
+        "\n",
+        "  out2.extend(melody_chords_f1[i][:2])\n",
+        "\n",
+        "  inp = torch.LongTensor(out2).cuda()\n",
+        "\n",
+        "  out1 = model.module.generate(inp[None, ...], \n",
+        "                        1, \n",
+        "                        temperature=temperature, \n",
+        "                        return_prime=False, \n",
+        "                        verbose=False)\n",
+        "  \n",
+        "  out2.extend(out1[0].tolist())\n",
+        "\n",
+        "print('=' * 70)\n",
+        "print('Done!')\n",
+        "print('=' * 70)\n",
+        "\n",
+        "#==================================================\n",
+        "\n",
+        "print('Rendering results...')\n",
+        "print('=' * 70)\n",
+        "\n",
+        "if len(out2) != 0:\n",
+        "    \n",
+        "    song = out2\n",
+        "    song_f = []\n",
+        "    time = 0\n",
+        "    dur = 0\n",
+        "    vel = 0\n",
+        "    pitch = 0\n",
+        "    channel = 0\n",
+        "\n",
+        "    son = []\n",
+        "    song1 = []\n",
+        "\n",
+        "    for s in song:\n",
+        "      if s >= 128 and s < (12*128)+1152:\n",
+        "        son.append(s)\n",
+        "      else:\n",
+        "        if len(son) == 3:\n",
+        "          song1.append(son)\n",
+        "        son = []\n",
+        "        son.append(s)\n",
+        "                    \n",
+        "    for ss in song1:\n",
+        "\n",
+        "      time += ss[0] * 10\n",
+        "\n",
+        "      dur = ((ss[1]-128) // 8) * 20\n",
+        "      vel = (((ss[1]-128) % 8)+1) * 15\n",
+        "   \n",
+        "      channel = (ss[2]-1152) // 128\n",
+        "      pitch = (ss[2]-1152) % 128\n",
+        "                      \n",
+        "      song_f.append(['note', time, dur, channel, pitch, vel ])\n",
+        "\n",
+        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                        output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition', \n",
+        "                                                        track_name='Project Los Angeles',\n",
+        "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
+        "                                                        number_of_ticks_per_quarter=500)\n",
+        "\n",
+        "\n",
+        "    print('=' * 70)\n",
+        "    print('Displaying resulting composition...')\n",
+        "    print('=' * 70)\n",
+        "\n",
+        "    fname = '/content/Los-Angeles-Music-Composer-Music-Composition'\n",
+        "\n",
+        "    x = []\n",
+        "    y =[]\n",
+        "    c = []\n",
+        "\n",
+        "    colors = ['red', 'yellow', 'green', 'cyan', 'blue', 'pink', 'orange', 'purple', 'gray', 'white', 'gold', 'silver']\n",
+        "\n",
+        "    for s in song_f:\n",
+        "      x.append(s[1] / 1000)\n",
+        "      y.append(s[4])\n",
+        "      c.append(colors[s[3]])\n",
+        "\n",
+        "    FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "    display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "\n",
+        "    plt.figure(figsize=(14,5))\n",
+        "    ax=plt.axes(title=fname)\n",
+        "    ax.set_facecolor('black')\n",
+        "\n",
+        "    plt.scatter(x,y, c=c)\n",
+        "    plt.xlabel(\"Time\")\n",
+        "    plt.ylabel(\"Pitch\")\n",
+        "    plt.show() "
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "ejdp32D_9Cs-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
