--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -283,7 +283,9 @@
         "events_matrix = []\n",
         "melody_chords_f = []\n",
         "melody_chords_f1 = []\n",
+        "\n",
         "itrack = 1\n",
+        "\n",
         "patches = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
         "\n",
         "patch_map = [\n",
@@ -330,7 +332,6 @@
         "\n",
         "      if event[3] < 12: # We won't write chans 12-16 for now...\n",
         "          events_matrix1.append(event)\n",
-        "          # stats[event[3]] += 1\n",
         "\n",
         "#=======================================================\n",
         "# PRE-PROCESSING\n",
@@ -373,103 +374,93 @@
         "\n",
         "      pe = e\n",
         "\n",
-        "  if len([y for y in melody_chords if y[2] != 9]) > 12: # Filtering out tiny/bad MIDIs...\n",
+        "instruments_list = list(set([y[2] for y in melody_chords]))\n",
+        "num_instr = len(instruments_list)\n",
         "\n",
-        "    times = [y[0] for y in melody_chords[12:]]\n",
-        "    avg_time = sum(times) / len(times)\n",
+        "#=======================================================\n",
+        "# FINAL PROCESSING\n",
+        "#=======================================================\n",
         "\n",
-        "    times_list = list(set(times))\n",
+        "# Break between compositions / Intro seq\n",
         "\n",
-        "    instruments_list = list(set([y[2] for y in melody_chords]))\n",
-        "    num_instr = len(instruments_list)\n",
+        "if 9 in instruments_list:\n",
+        "  drums_present = 2818 # Yes\n",
+        "else:\n",
+        "  drums_present = 2817 # No\n",
         "\n",
-        "    if avg_time < 112 and instruments_list != [9]: # Filtering out bad MIDIs...\n",
-        "      if 0 in times_list: # Filtering out (mono) melodies MIDIs\n",
+        "melody_chords_f.extend([2816, drums_present, 2819+(num_instr-1)])\n",
         "\n",
-        "          #=======================================================\n",
-        "          # FINAL PROCESSING\n",
-        "          #=======================================================\n",
+        "#=======================================================\n",
         "\n",
-        "          # Break between compositions / Intro seq\n",
+        "# Composition control seq\n",
+        "intro_mode_time = statistics.mode([0] + [y[0] for y in melody_chords if y[2] != 9 and y[0] != 0])\n",
+        "intro_mode_dur = statistics.mode([y[1] for y in melody_chords if y[2] != 9])\n",
+        "intro_mode_pitch = statistics.mode([y[3] for y in melody_chords if y[2] != 9])\n",
+        "intro_mode_velocity = statistics.mode([y[4] for y in melody_chords if y[2] != 9])\n",
         "\n",
-        "          if 9 in instruments_list:\n",
-        "            drums_present = 2818 # Yes\n",
-        "          else:\n",
-        "            drums_present = 2817 # No\n",
+        "# Instrument value 12 is reserved for composition control seq\n",
+        "intro_dur_vel = (intro_mode_dur * 8) + (intro_mode_velocity-1)\n",
+        "intro_cha_ptc = (12 * 128) + intro_mode_pitch\n",
         "\n",
-        "          melody_chords_f.extend([2816, drums_present, 2819+(num_instr-1)])\n",
+        "melody_chords_f.extend([intro_mode_time, intro_dur_vel+128, intro_cha_ptc+1152])\n",
         "\n",
-        "          #=======================================================\n",
+        "# TOTAL DICTIONARY SIZE 2831\n",
         "\n",
-        "          # Composition control seq\n",
-        "          intro_mode_time = statistics.mode([0] + [y[0] for y in melody_chords if y[2] != 9 and y[0] != 0])\n",
-        "          intro_mode_dur = statistics.mode([y[1] for y in melody_chords if y[2] != 9])\n",
-        "          intro_mode_pitch = statistics.mode([y[3] for y in melody_chords if y[2] != 9])\n",
-        "          intro_mode_velocity = statistics.mode([y[4] for y in melody_chords if y[2] != 9])\n",
+        "#=======================================================\n",
+        "# MAIN PROCESSING CYCLE\n",
+        "#=======================================================\n",
         "\n",
-        "          # Instrument value 12 is reserved for composition control seq\n",
-        "          intro_dur_vel = (intro_mode_dur * 8) + (intro_mode_velocity-1)\n",
-        "          intro_cha_ptc = (12 * 128) + intro_mode_pitch\n",
+        "for m in melody_chords:\n",
         "\n",
-        "          melody_chords_f.extend([intro_mode_time, intro_dur_vel+128, intro_cha_ptc+1152])\n",
+        "  # WRITING EACH NOTE HERE\n",
+        "  dur_vel = (m[1] * 8) + (m[4]-1)\n",
+        "  cha_ptc = (m[2] * 128) + m[3]\n",
         "\n",
-        "          # TOTAL DICTIONARY SIZE 2831\n",
+        "  melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
+        "  melody_chords_f1.append([m[0], dur_vel+128, cha_ptc+1152])\n",
         "\n",
-        "          #=======================================================\n",
-        "          # MAIN PROCESSING CYCLE\n",
-        "          #=======================================================\n",
-        "\n",
-        "          for m in melody_chords:\n",
-        "\n",
-        "            # WRITING EACH NOTE HERE\n",
-        "            dur_vel = (m[1] * 8) + (m[4]-1)\n",
-        "            cha_ptc = (m[2] * 128) + m[3]\n",
-        "\n",
-        "            melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
-        "            melody_chords_f1.append([m[0], dur_vel+128, cha_ptc+1152])\n",
-        "\n",
-        "    #=======================================================\n",
+        "#=======================================================\n",
         "  \n",
-        "    song = melody_chords_f\n",
-        "    song_f = []\n",
-        "    tim = 0\n",
-        "    dur = 0\n",
-        "    vel = 0\n",
-        "    pitch = 0\n",
-        "    channel = 0\n",
+        "song = melody_chords_f\n",
+        "song_f = []\n",
+        "tim = 0\n",
+        "dur = 0\n",
+        "vel = 0\n",
+        "pitch = 0\n",
+        "channel = 0\n",
         "\n",
+        "son = []\n",
+        "song1 = []\n",
+        "\n",
+        "for s in song:\n",
+        "  if s >= 128 and s < (12*128)+1152:\n",
+        "    son.append(s)\n",
+        "  else:\n",
+        "    if len(son) == 3:\n",
+        "      song1.append(son)\n",
         "    son = []\n",
-        "    song1 = []\n",
+        "    son.append(s)\n",
+        "                \n",
+        "for ss in song1:\n",
         "\n",
-        "    for s in song:\n",
-        "      if s >= 128 and s < (12*128)+1152:\n",
-        "        son.append(s)\n",
-        "      else:\n",
-        "        if len(son) == 3:\n",
-        "          song1.append(son)\n",
-        "        son = []\n",
-        "        son.append(s)\n",
-        "                    \n",
-        "    for ss in song1:\n",
+        "  tim += ss[0] * 10\n",
         "\n",
-        "      tim += ss[0] * 10\n",
+        "  dur = ((ss[1]-128) // 8) * 20\n",
+        "  vel = (((ss[1]-128) % 8)+1) * 15\n",
         "\n",
-        "      dur = ((ss[1]-128) // 8) * 20\n",
-        "      vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "   \n",
-        "      channel = (ss[2]-1152) // 128\n",
-        "      pitch = (ss[2]-1152) % 128\n",
-        "                      \n",
-        "      song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
+        "  channel = (ss[2]-1152) // 128\n",
+        "  pitch = (ss[2]-1152) % 128\n",
+        "                  \n",
+        "  song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
-        "                                                          track_name='Project Los Angeles',\n",
-        "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                          number_of_ticks_per_quarter=500)\n",
-        "        \n",
-        "    #=======================================================\n",
+        "detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                      output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                      output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
+        "                                                      track_name='Project Los Angeles',\n",
+        "                                                      list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
+        "                                                      number_of_ticks_per_quarter=500)\n",
+        "    \n",
+        "#=======================================================\n",
         "\n",
         "print('=' * 70)\n",
         "print('Composition stats:')\n",
@@ -1003,11 +994,11 @@
         "      cha_ptc = (melody_instrument_number * 128) + ptc\n",
         "\n",
         "      if tim != 0:\n",
-        "\n",
-        "\n",
         "        melody.append([tim, dur_vel+128, cha_ptc+1152])\n",
         "\n",
         "      pe = e\n",
+        "\n",
+        "melody[0][0] = 0\n",
         "\n",
         "#=======================================================\n",
         "\n",
@@ -1171,7 +1162,7 @@
       "private_outputs": true,
       "provenance": []
     },
-    "gpuClass": "premium",
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
