--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -343,8 +343,8 @@
         "\n",
         "  # recalculating timings\n",
         "  for e in events_matrix1:\n",
-        "      e[1] = int(round(e[1] / 10)) # Max 1 seconds for start-times\n",
-        "      e[2] = int(round(e[2] / 20)) # Max 2 seconds for durations\n",
+        "      e[1] = int(e[1] / 10) # Max 1 seconds for start-times\n",
+        "      e[2] = int(e[2] / 20) # Max 2 seconds for durations\n",
         "\n",
         "  # Sorting by pitch, then by start-time\n",
         "  events_matrix1.sort(key=lambda x: x[4], reverse=True)\n",
