--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer Edition (ver. 1.0)\n",
+        "# Los Angeles Music Composer Edition (ver. 1.1)\n",
         "\n",
         "***\n",
         "\n",
@@ -251,7 +251,7 @@
         "#@title Load Seed MIDI\n",
         "select_seed_MIDI = \"Los-Angeles-Music-Composer-Piano-Seed-1\" #@param [\"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
         "full_path_to_custom_seed_MIDI = \"\" #@param {type:\"string\"}\n",
-        "number_of_prime_tokens = 512 #@param {type:\"slider\", min:512, max:32768, step:512}\n",
+        "number_of_prime_tokens = 402 #@param {type:\"slider\", min:126, max:3000, step:3}\n",
         "\n",
         "if full_path_to_custom_seed_MIDI == '':\n",
         "  f = '/content/Los-Angeles-Music-Composer/Seeds/'+select_seed_MIDI+'.mid'\n",
@@ -367,106 +367,98 @@
         "\n",
         "      pe = e\n",
         "\n",
-        "  if len([y for y in melody_chords if y[2] != 9]) > 12: # Filtering out tiny/bad MIDIs...\n",
         "\n",
-        "    times = [y[0] for y in melody_chords[12:]]\n",
-        "    avg_time = sum(times) / len(times)\n",
         "\n",
-        "    times_list = list(set(times))\n",
+        "instruments_list = list(set([y[2] for y in melody_chords]))\n",
+        "num_instr = len(instruments_list)\n",
         "\n",
-        "    instruments_list = list(set([y[2] for y in melody_chords]))\n",
-        "    num_instr = len(instruments_list)\n",
+        "#=======================================================\n",
+        "# FINAL PROCESSING\n",
+        "#=======================================================\n",
         "\n",
-        "    if avg_time < 112 and instruments_list != [9]: # Filtering out bad MIDIs...\n",
-        "      if 0 in times_list: # Filtering out (mono) melodies MIDIs\n",
+        "# Break between compositions / Intro seq\n",
         "\n",
-        "          #=======================================================\n",
-        "          # FINAL PROCESSING\n",
-        "          #=======================================================\n",
+        "if 9 in instruments_list:\n",
+        "  drums_present = 2818 # Yes\n",
+        "else:\n",
+        "  drums_present = 2817 # No\n",
         "\n",
-        "          # Break between compositions / Intro seq\n",
+        "melody_chords_f.extend([2816, drums_present, 2819+(num_instr-1)])\n",
         "\n",
-        "          if 9 in instruments_list:\n",
-        "            drums_present = 2818 # Yes\n",
-        "          else:\n",
-        "            drums_present = 2817 # No\n",
+        "#=======================================================\n",
         "\n",
-        "          melody_chords_f.extend([2816, drums_present, 2819+(num_instr-1)])\n",
+        "# Composition control seq\n",
+        "intro_mode_time = statistics.mode([0] + [y[0] for y in melody_chords if y[2] != 9 and y[0] != 0])\n",
+        "intro_mode_dur = statistics.mode([y[1] for y in melody_chords if y[2] != 9])\n",
+        "intro_mode_pitch = statistics.mode([y[3] for y in melody_chords if y[2] != 9])\n",
+        "intro_mode_velocity = statistics.mode([y[4] for y in melody_chords if y[2] != 9])\n",
         "\n",
-        "          #=======================================================\n",
+        "# Instrument value 12 is reserved for composition control seq\n",
+        "intro_dur_vel = (intro_mode_dur * 8) + (intro_mode_velocity-1)\n",
+        "intro_cha_ptc = (12 * 128) + intro_mode_pitch\n",
         "\n",
-        "          # Composition control seq\n",
-        "          intro_mode_time = statistics.mode([0] + [y[0] for y in melody_chords if y[2] != 9 and y[0] != 0])\n",
-        "          intro_mode_dur = statistics.mode([y[1] for y in melody_chords if y[2] != 9])\n",
-        "          intro_mode_pitch = statistics.mode([y[3] for y in melody_chords if y[2] != 9])\n",
-        "          intro_mode_velocity = statistics.mode([y[4] for y in melody_chords if y[2] != 9])\n",
+        "melody_chords_f.extend([intro_mode_time, intro_dur_vel+128, intro_cha_ptc+1152])\n",
         "\n",
-        "          # Instrument value 12 is reserved for composition control seq\n",
-        "          intro_dur_vel = (intro_mode_dur * 8) + (intro_mode_velocity-1)\n",
-        "          intro_cha_ptc = (12 * 128) + intro_mode_pitch\n",
+        "# TOTAL DICTIONARY SIZE 2831\n",
         "\n",
-        "          melody_chords_f.extend([intro_mode_time, intro_dur_vel+128, intro_cha_ptc+1152])\n",
+        "#=======================================================\n",
+        "# MAIN PROCESSING CYCLE\n",
+        "#=======================================================\n",
         "\n",
-        "          # TOTAL DICTIONARY SIZE 2831\n",
+        "for m in melody_chords:\n",
         "\n",
-        "          #=======================================================\n",
-        "          # MAIN PROCESSING CYCLE\n",
-        "          #=======================================================\n",
+        "  # WRITING EACH NOTE HERE\n",
+        "  dur_vel = (m[1] * 8) + (m[4]-1)\n",
+        "  cha_ptc = (m[2] * 128) + m[3]\n",
         "\n",
-        "          for m in melody_chords:\n",
+        "  melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
+        "  melody_chords_f1.append([m[0], dur_vel+128, cha_ptc+1152])\n",
         "\n",
-        "            # WRITING EACH NOTE HERE\n",
-        "            dur_vel = (m[1] * 8) + (m[4]-1)\n",
-        "            cha_ptc = (m[2] * 128) + m[3]\n",
+        "melody_chords_f1 = melody_chords_f1[:(number_of_prime_tokens // 3)]\n",
+        "melody_chords_f = melody_chords_f[:number_of_prime_tokens]\n",
         "\n",
-        "            melody_chords_f.extend([m[0], dur_vel+128, cha_ptc+1152])\n",
-        "            melody_chords_f1.append([m[0], dur_vel+128, cha_ptc+1152])\n",
-        "\n",
-        "    melody_chords_f1 = melody_chords_f1[:(number_of_prime_tokens // 3)]\n",
-        "    melody_chords_f = melody_chords_f[:number_of_prime_tokens]\n",
-        "\n",
-        "    #=======================================================\n",
+        "#=======================================================\n",
         "  \n",
-        "    song = melody_chords_f\n",
-        "    song_f = []\n",
-        "    tim = 0\n",
-        "    dur = 0\n",
-        "    vel = 0\n",
-        "    pitch = 0\n",
-        "    channel = 0\n",
+        "song = melody_chords_f\n",
+        "song_f = []\n",
+        "tim = 0\n",
+        "dur = 0\n",
+        "vel = 0\n",
+        "pitch = 0\n",
+        "channel = 0\n",
         "\n",
+        "son = []\n",
+        "song1 = []\n",
+        "\n",
+        "for s in song:\n",
+        "  if s >= 128 and s < (12*128)+1152:\n",
+        "    son.append(s)\n",
+        "  else:\n",
+        "    if len(son) == 3:\n",
+        "      song1.append(son)\n",
         "    son = []\n",
-        "    song1 = []\n",
+        "    son.append(s)\n",
+        "                \n",
+        "for ss in song1:\n",
         "\n",
-        "    for s in song:\n",
-        "      if s >= 128 and s < (12*128)+1152:\n",
-        "        son.append(s)\n",
-        "      else:\n",
-        "        if len(son) == 3:\n",
-        "          song1.append(son)\n",
-        "        son = []\n",
-        "        son.append(s)\n",
-        "                    \n",
-        "    for ss in song1:\n",
+        "  tim += ss[0] * 10\n",
         "\n",
-        "      tim += ss[0] * 10\n",
+        "  dur = ((ss[1]-128) // 8) * 20\n",
+        "  vel = (((ss[1]-128) % 8)+1) * 15\n",
         "\n",
-        "      dur = ((ss[1]-128) // 8) * 20\n",
-        "      vel = (((ss[1]-128) % 8)+1) * 15\n",
-        "   \n",
-        "      channel = (ss[2]-1152) // 128\n",
-        "      pitch = (ss[2]-1152) % 128\n",
-        "                      \n",
-        "      song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
+        "  channel = (ss[2]-1152) // 128\n",
+        "  pitch = (ss[2]-1152) % 128\n",
+        "                  \n",
+        "  song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',  \n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
-        "                                                          track_name='Project Los Angeles',\n",
-        "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                          number_of_ticks_per_quarter=500)\n",
-        "        \n",
-        "    #=======================================================\n",
+        "detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                      output_signature = 'Los Angeles Music Composer',  \n",
+        "                                                      output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
+        "                                                      track_name='Project Los Angeles',\n",
+        "                                                      list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
+        "                                                      number_of_ticks_per_quarter=500)\n",
+        "    \n",
+        "#=======================================================\n",
         "\n",
         "print('=' * 70)\n",
         "print('Composition stats:')\n",
@@ -534,12 +526,14 @@
         "#@title Standard/Simple Continuation\n",
         "\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
-        "number_of_memory_tokens = 3584 #@param {type:\"slider\", min:512, max:3584, step:512}\n",
+        "number_of_memory_tokens = 4095 #@param {type:\"slider\", min:402, max:4095, step:3}\n",
         "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Standard Model Generator')\n",
         "print('=' * 70)\n",
+        "\n",
+        "preview = melody_chords_f[-120:]\n",
         "\n",
         "inp = [melody_chords_f[-number_of_memory_tokens:]] * number_of_batches_to_generate\n",
         "\n",
@@ -548,7 +542,7 @@
         "start_time = time()\n",
         "\n",
         "out = model.module.generate(inp, \n",
-        "                            512, \n",
+        "                            402, \n",
         "                            temperature=temperature, \n",
         "                            return_prime=False,  \n",
         "                            verbose=True)\n",
@@ -578,7 +572,7 @@
         "\n",
         "  if len(out) != 0:\n",
         "      \n",
-        "      song = out1\n",
+        "      song = preview + out1\n",
         "      song_f = []\n",
         "      tim = 0\n",
         "      dur = 0\n",
@@ -641,6 +635,11 @@
         "      ax.set_facecolor('black')\n",
         "\n",
         "      plt.scatter(x,y, c=c)\n",
+        "\n",
+        "      pbl = song_f[39][1] / 1000\n",
+        "\n",
+        "      ax.axvline(x=pbl, c='w')\n",
+        "\n",
         "      plt.xlabel(\"Time\")\n",
         "      plt.ylabel(\"Pitch\")\n",
         "      plt.show() "
