--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -283,11 +283,6 @@
         "\n",
         "AUX_DATA = TMIDIX.Tegridy_Any_Pickle_File_Reader('/content/Los-Angeles-Music-Composer/Aux-Data/Los_Angeles_Music_Composer_Aux_Data')\n",
         "\n",
-        "titles_index = []\n",
-        "\n",
-        "for A in AUX_DATA:\n",
-        "  titles_index.append(A[0])\n",
-        "\n",
         "print('Done!')"
       ],
       "metadata": {
@@ -321,15 +316,23 @@
         "number_of_tokens_to_generate = 512 #@param {type:\"slider\", min:32, max:4096, step:32}\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
-        "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "temperature = 0.9 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer TTM Model Generator')\n",
         "print('=' * 70)\n",
         "\n",
         "print('Searching titles...Please wait...')\n",
+        "random.shuffle(AUX_DATA)\n",
+        "\n",
+        "titles_index = []\n",
+        "\n",
+        "for A in AUX_DATA:\n",
+        "  titles_index.append(A[0])\n",
+        "\n",
         "search_match = process.extract(query=enter_desired_song_title, choices=titles_index, limit=1)\n",
         "search_index = titles_index.index(search_match[0][0])\n",
+        "\n",
         "print('Done!')\n",
         "print('=' * 70)\n",
         "print('Selected title:', AUX_DATA[search_index][0])\n",
